# news_summarizer

./: .gitignore  app.py  audio_config.py  condenser_service.py  kokoro_tts.py  llm_models.py  main.py  news_reader.ipynb  news_reader.py  pyproject.toml  requirements.txt  system_prompts.py  telegram_sender.py  utils.py  whisper_transcriber.py  youtube_transcript_fetcher.py
.github/: copilot-instructions.md
templates/: index.html
